Fix highlighted background not covering width when list scrolls horizontally

--- a/stylesheets/tree-view-open-files.less
+++ b/stylesheets/tree-view-open-files.less
@@ -11,7 +11,7 @@
 	overflow: auto;
 	padding-left: 5px;
 	padding-right: 10px;
-	position: relative;
+
 	flex: 0 0 1;
 
 	.close-open-file {
